--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "razorpay": "^2.8.0"
   }
 }
